--- a/my-account/health-facilities.html
+++ b/my-account/health-facilities.html
@@ -659,13 +659,14 @@
             const addedUsers = new Set();
 
             try {
-                const res = await axios.get(`https://health-care-facilities-backend.vercel.app/api/get-reports?page=${page}&limit=${pageSize}`, { email: userEmail });
+                const res = await axios.get(`https://health-care-facilities-backend.vercel.app/api/get-user-report?page=${page}&limit=${pageSize}`, { email: userEmail });
                   const facilityCounts = { hospital: res.data.facilityCounts.hospital, "health centre": res.data.facilityCounts['health centre'], chemists: res.data.facilityCounts.chemists, "medical labs": res.data.facilityCounts["medical labs"], pharmacy: res.data.facilityCounts.pharmacy, "drug store": res.data.facilityCounts["drug store"], "maternity centre": res.data.facilityCounts["maternity centre"] };
 
 
                 allData = res.data.data;
                   const totalRecords = res.data.totalReports;
-
+                console.log(allData);
+                
 
                 renderTable(allData);
 
