--- a/my-account/health-facilities.html
+++ b/my-account/health-facilities.html
@@ -659,11 +659,12 @@
             const addedUsers = new Set();
 
             try {
-                const res = await axios.post(`http://localhost:3001/api/get-user-report?page=${page}&limit=${pageSize}`, { email: userEmail });
+                const res = await axios.post(`https://health-care-facilities-backend.vercel.app/api/get-user-report?page=${page}&limit=${pageSize}`, { email: userEmail });
                 const facilityCounts = { hospital: res.data.facilityCounts.hospital, "health centre": res.data.facilityCounts['health centre'], chemists: res.data.facilityCounts.chemists, "medical labs": res.data.facilityCounts["medical labs"], pharmacy: res.data.facilityCounts.pharmacy, "drug store": res.data.facilityCounts["drug store"], "maternity centre": res.data.facilityCounts["maternity centre"] };
+                console.log(res.data);
                 allData = res.data.data;
                 const totalRecords = res.data.totalReports;
-
+                    
                 renderTable(allData);
 
                 const start = (page - 1) * pageSize;
