--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
                         console.log(`Batch ${i + 1} Response:`, response.data);  // Log response
                     }
 
-                    // location.reload();
+                location.reload();
                 } catch (err) {
                     console.error('Error uploading batches:', err);
                 } finally {
